# ruddy

./: .gitignore  README.md
components/backend/: Cargo.toml  README.md
components/backend/public/: controller.html  worker.html
components/backend/public/static/: controller.js  worker.js
components/backend/src/controller/: coordinator.rs  main.rs  messages.rs  uuid.rs  worker_client.rs  ws.rs
components/backend/src/utils/: digital_ocean_api.rs  main.rs
components/backend/src/worker/: blender.rs  executor.rs  main.rs  messages.rs  worker_state.rs  ws.rs
components/ui/: package-lock.json  package.json
components/ui/public/: index.html
components/ui/src/: App.tsx  mock-jobs.json
components/ui/src/common/: interfaces.ts
components/ui/src/common/components/: TopNav.tsx  withSocketConnection.tsx
components/ui/src/views/home/: HomeView.tsx
components/ui/src/views/home/components/: CreateJobButton.tsx  JobSummary.tsx
components/ui/src/views/job/: JobView.tsx
